import Pod-ToDemo 0.22 from CPAN
git-cpan-module:   Pod-ToDemo
git-cpan-version:  0.22
git-cpan-authorid: CHROMATIC
git-cpan-file:     authors/id/C/CH/CHROMATIC/Pod-ToDemo-0.22.tar.gz

--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,7 @@
 --- #YAML:1.0
 name: Pod-ToDemo
-version: 0.21
-author:
-  - chromatic, E<lt>chromatic at wgz dot orgE<gt>
+version: 0.22
+author: ~
 abstract: writes a demo program from a tutorial POD
 license: perl
 requires:
@@ -11,5 +10,5 @@ requires:
 provides:
   Pod::ToDemo:
     file: lib/Pod/ToDemo.pm
-    version: 0.21
-generated_by: Module::Build version 0.25
+    version: 0.22
+generated_by: Module::Build version 0.2607
